# SwiftRemit

./: .gitignore  ABUSE_PROTECTION_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  README.md  TESTING_COMPLETE.md  rust-toolchain.toml  vercel.json
api/: package-lock.json  package.json
api/src/: app.ts
api/src/routes/: remittances.ts
backend/: package.json
backend/src/: api.ts  database.ts  metrics.ts  openapi-generator.ts  sanitizer.ts  scheduler.ts  types.ts  webhook-handler.ts
backend/src/__tests__/: sanitizer.test.ts  sep24-service.test.ts  webhook-handler-remittance.test.ts
frontend/: package-lock.json  package.json  vercel.json
frontend/src/: App.jsx
frontend/src/components/: ProofOfPayout.tsx  SendMoneyFlow.tsx  TransactionStatusTracker.tsx
frontend/src/components/__tests__/: ProofOfPayout.test.tsx  TransactionStatusTracker.test.tsx
public/.well-known/: stellar.toml.template
sdk/: README.md  package.json
sdk/src/: client.ts  convert.ts  errors.ts  index.test.ts  index.ts  types.ts
src/: abuse_protection.rs  circuit_breaker.rs  circuit_breaker_storage.rs  hashing.rs  lib.rs  test_fee_property.rs  test_governance.rs  test_governance_property.rs  validation.rs
