[package]
name = "swiftremit"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug-log = []
benchmarks = []
legacy-tests = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "25.3.1"

[dev-dependencies]
soroban-sdk = { version = "25.3.1", features = ["testutils"] }
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "settlement_storage"
harness = false
required-features = ["benchmarks"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
